kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medisupply-ingress
  namespace: medisupply
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin,Content-Type,Accept,Authorization"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /web/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mediador-web-service
            port:
              number: 5002
